--- a/Office_Location/res/layout/activity_act__main.xml
+++ b/Office_Location/res/layout/activity_act__main.xml
@@ -25,10 +25,9 @@
 
         <Button
             android:id="@+id/bnt_Search"
-            android:layout_width="60dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="Search" />
+            android:layout_width="40dp"
+            android:layout_height="43dp"
+            android:background="@drawable/searchicon" />
 
     </LinearLayout>
 
